# nyuclassesfrom.xyz

./: .gitignore  LICENSE  README.md  package-lock.json  vite.config.js
data/: Cargo.toml  README.md  example_data.json  mynyu.go
data/json_reader/: Cargo.toml  course_catalog.txt  course_flat.json  course_info.txt  dump.rdb  example_data2.json
data/json_reader/cached/: course_non_flat.txt
data/json_reader/json/: course_flat.json  course_flat_2022-11-13 21:18:22.863566133.json
data/json_reader/src/: fetch.rs  json.rs  main.rs  mod.rs  redis_db.rs  util.rs
data/json_reader/src/fetch/: fetch.rs  json.rs  json_structure.rs  mod.rs  types.rs  url_builder.rs  util.rs
data/src/: database.rs  fetch.rs  json.rs  main.rs  redis_db.rs  types.rs  util.rs
fe/: README.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.js
frontend/components/: CourseCard.tsx
frontend/components/ga/: gtag.ts
frontend/components/utils/: formatSession.ts  formatTime.ts
frontend/ga/: gtag.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  search.tsx
frontend/public/: fake-data.json
frontend/src/: App.svelte  app.css
frontend/src/lib/ThemeSwitch/: ThemeSwitch.svelte
frontend/styles/: globals.css
