[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
chrono-tz = "0.6.3"
futures = "0.3.24"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0.2", features = ["full"] }
redis = "0.22.1"
dotenv = "0.15.0"
indicatif = "0.17.2"
